--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=SimpleFileShare
+logging.level.=ERROR
+logging.file=${java.io.tmpdir}/${spring.application.name}.log
+spring.application.debug=false
