Fixed deployment issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=SimpleFileShare
 logging.level.=ERROR
 logging.file=${java.io.tmpdir}/${spring.application.name}.log
 spring.application.debug=false
+server.port=5000
